fix bug 937634 - Prevent icon issues on small screens

--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -417,10 +417,6 @@
       margin-right: 0;
     }
 
-    h2 {
-      font-size: 20px;
-    }
-
     .column-callout {
       a {
         font-size: larger-font-size;
@@ -455,6 +451,19 @@
 
     .home-masthead h1, .home-search-form {
       display: none;
+    }
+
+    .home-demos h2, .home-contribute h2, .column-hacks > h2 {
+      font-size: 20px;
+
+      > i {
+        display: none;
+      }
+
+      a {
+        margin: 8px 0 0 0;
+        display: block;
+      }
     }
   }
 }
